--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clsx": "^2.1.1",
     "faker": "^6.6.6",
     "lucide-react": "^0.383.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
