--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@faker-js/faker": "^8.4.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@uploadthing/react": "^6.6.0",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -26,7 +27,8 @@
     "react-hot-toast": "^2.4.1",
     "sass": "^1.77.4",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.12.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
