--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "faker": "^6.6.6",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "lucide-react": "^0.383.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
+    "nuka-carousel": "^8.0.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
