Categories, Banners, Products, Markets minimal styling

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
+    "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "sass": "^1.77.4",
     "tailwind-merge": "^2.3.0",
