--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.20.1",
     "@uploadthing/react": "^6.6.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
