--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^6.6.6",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "geist": "^1.3.1",
     "lucide-react": "^0.383.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
