--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.1",
     "@uploadthing/react": "^6.6.0",
     "bcrypt": "^5.1.1",
@@ -38,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
     "sass": "^1.77.4",
     "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.3.0",
