--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NEXT_PUBLIC_BASE_URL='http://localhost:3000'
 
 
 DATABASE_URL="mongodb+srv://scot:wE7JmTSWPqShs0Tl@cluster0.gsnsemu.mongodb.net/multiVendorDB?retryWrites=true&w=majority"
+
+RESEND_API_KEY="re_jCmsFFih_Lh2jXPA64eC9eFHrixR4n1Es"
