--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -17,9 +18,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "0.0.25",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.1",
     "@uploadthing/react": "^6.6.0",
+    "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +33,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.383.0",
     "next": "^14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuka-carousel": "^8.0.1",
     "react": "^18",
@@ -40,11 +44,13 @@
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "resend": "^4.0.0",
     "sass": "^1.77.4",
     "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.12.0"
+    "uploadthing": "^6.12.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -52,6 +58,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prisma": "^5.16.1",
+    "react-email": "3.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
