--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -18,7 +19,6 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-
     "@react-email/components": "0.0.25",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.1",
