--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.383.0",
-    "next": "^14.2.4",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuka-carousel": "^8.0.1",
@@ -43,11 +43,12 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.5",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-redux": "^9.1.2",
+    "react-to-print": "^2.15.1",
     "resend": "^4.0.0",
     "sass": "^1.77.4",
-    "sweetalert2": "^11.12.4",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
@@ -59,7 +60,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prisma": "^5.19.1",
-    "react-email": "3.0.1",
+    "react-email": "^1.10.1",
     "tailwindcss": "^3.4.1"
   }
 }
