--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -33,7 +33,7 @@
     "flowbite-react": "^0.10.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.383.0",
-    "next": "^14.2.13",
+    "next": "^14.2.14",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuka-carousel": "^8.0.1",
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
