--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "flowbite-react": "^0.10.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.383.0",
+    "mongodb": "^6.10.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
