--- a/package.json
+++ b/package.json
@@ -32,24 +32,28 @@
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "geist": "^1.3.1",
+    "html-react-parser": "^5.1.18",
     "lucide-react": "^0.383.0",
     "mongodb": "^6.10.0",
     "next": "^14.2.14",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuka-carousel": "^8.0.1",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.5",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^9.1.2",
+    "react-share-social": "^0.1.60",
     "react-to-print": "^2.15.1",
     "resend": "^4.0.0",
     "sass": "^1.77.4",
     "sweetalert2": "^11.6.13",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
