--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@react-email/components": "0.0.25",
@@ -37,6 +37,7 @@
     "flowbite-react": "^0.10.1",
     "geist": "^1.3.1",
     "html-react-parser": "^5.1.18",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.383.0",
     "mongodb": "^6.10.0",
     "next": "^14.2.14",
@@ -49,6 +50,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0-beta.4",
     "react-redux": "^9.1.2",
